syntax = "proto3";

//go:generate mockery --name TerrariumServiceServer

package terrarium.v0;

option go_package = "github.com/cldcvr/terrarium/api/pkg/pb/terrariumpb";

import "google/protobuf/empty.proto";

import "api/pkg/pb/grpc/validator/validator.proto";
import "api/pkg/pb/google/api/annotations.proto";
import "api/pkg/pb/protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Terrarium Service API";
    version: "0";
  };
  schemes: HTTPS;
};

message Module {
  string id = 1;
  string taxonomy_id = 2;
  string module_name = 3;
  string source = 4;
  string version = 5;
  string description = 6;
}

message CompletionRequest {
  string codeContext = 1;
  repeated string modules = 2 [(validate.rules).repeated = {min_items: 1, unique: true, items: { string: {uuid: true} }}];
}

message CompletionResponse {
  repeated string suggestions = 1;
}

message Page {
  int32 size = 1; // default 10, maximum no limit
  int32 index = 2; // 0 indexed, default 0
  int32 total = 3; // READ-ONLY. Total number of pages available. min=1, max=(max(index)+1)
}

message ListModulesRequest {
  string search = 1; // optional search
  Page page = 2;
}

message ListModulesResponse {
  repeated Module modules = 1;
  Page page = 2;
}

service TerrariumService {
  // Health check endpoint
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/v0/healthcheck"
    };
  }

  // List modules matching the source pattern
  rpc ListModules(ListModulesRequest) returns (ListModulesResponse) {
    option (google.api.http) = {
      get: "/v0/modules"
    };
  }

  // Code completion endpoint
  rpc CodeCompletion(CompletionRequest) returns (CompletionResponse) {
    option (google.api.http) = {
      post: "/v0/completion"
      body: "*"
    };
  }
}
